--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
       hooks:
           - id: isort
             name: isort
-            stages: [commit]
+            stages: [pre-commit]
             language: system
             entry: isort
             types: [python]
@@ -11,33 +11,24 @@ repos:
 
           - id: black
             name: black
-            stages: [commit]
+            stages: [pre-commit]
             language: system
-            entry: black
+            entry: black backend/
             types: [python]
             always_run: true
 
           - id: flake8
             name: flake8
-            stages: [commit]
+            stages: [pre-commit]
             language: system
-            entry: flake8
+            entry: flake8 --ignore=E501
             types: [python]
             always_run: true
 
           - id: pytest
             name: pytest
-            stages: [commit]
+            stages: [pre-commit]
             language: system
             entry: pytest -s tests
             types: [python]
-            always_run: true
-
-          - id: pytest-cov
-            name: pytest
-            stages: [push]
-            language: system
-            entry: pytest --cov --cov-fail-under=0
-            types: [python]
-            pass_filenames: false
             always_run: true
