--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
             name: flake8
             stages: [pre-commit]
             language: system
-            entry: flake8 --ignore=E501
+            entry: flake8 --ignore=E501 --exclude=frontend/node_modules
             types: [python]
             always_run: true
 
