--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ django-cors-headers = "^4.6.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
 pytest-cov = "^6.0.0"
-
+pytest-django = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
