--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.12"
 django = "^5.1.3"
 djangorestframework = "^3.15.2"
 django-cors-headers = "^4.6.0"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+rich = "^13.9.4"
+logging = "^0.4.9.6"
+django-extensions = "^3.2.3"
 
 
 [tool.poetry.group.test.dependencies]
