--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ beautifulsoup4 = "^4.12.3"
 rich = "^13.9.4"
 logging = "^0.4.9.6"
 django-extensions = "^3.2.3"
+geopy = "^2.4.1"
 
 
 [tool.poetry.group.test.dependencies]
