--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.14",
+    "@types/maplibre-gl": "^1.13.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^4.7.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-id-swiper": "^4.0.0",
+    "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.28.0",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
