--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ rich = "^13.9.4"
 logging = "^0.4.9.6"
 django-extensions = "^3.2.3"
 geopy = "^2.4.1"
+parse = "^1.20.2"
+parquet = "^1.3.1"
+pandas = "^2.2.3"
+pyarrow = "^18.0.0"
+tqdm = "^4.67.0"
 
 
 [tool.poetry.group.test.dependencies]
