--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ parquet = "^1.3.1"
 pandas = "^2.2.3"
 pyarrow = "^18.0.0"
 tqdm = "^4.67.0"
+jupyter = "^1.1.1"
 
 
 [tool.poetry.group.test.dependencies]
