--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pandas = "^2.2.3"
 pyarrow = "^18.0.0"
 tqdm = "^4.67.0"
 jupyter = "^1.1.1"
+folium = "^0.18.0"
 
 
 [tool.poetry.group.test.dependencies]
