--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/geojson": "^7946.0.14",
+    "@stadiamaps/maplibre-search-box": "^1.1.0",
+    "@turf/turf": "^7.1.0",
     "@types/leaflet": "^1.9.14",
     "@types/maplibre-gl": "^1.13.2",
     "autoprefixer": "^10.4.20",
@@ -39,6 +40,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.13.0",
+    "@types/geojson": "^7946.0.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/parser": "^8.14.0",
