--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stadiamaps/maplibre-search-box": "^1.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "@turf/turf": "^7.1.0",
     "@types/leaflet": "^1.9.14",
     "@types/maplibre-gl": "^1.13.2",
@@ -52,6 +53,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "react-dom": "^18.3.1",
+    "supabase": "^2.1.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
