--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pyarrow = "^18.0.0"
 tqdm = "^4.67.0"
 jupyter = "^1.1.1"
 folium = "^0.18.0"
+supabase = "^2.10.0"
 
 
 [tool.poetry.group.test.dependencies]
