--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@turf/turf": "^7.1.0",
     "@types/leaflet": "^1.9.14",
     "@types/maplibre-gl": "^1.13.2",
+    "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
