--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^4.7.1",
+    "next": "^15.1.2",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-icons": "^5.3.0",
