--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,66 +1,74 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@stadiamaps/maplibre-search-box": "^1.1.0",
-    "@supabase/supabase-js": "^2.47.10",
-    "@turf/turf": "^7.1.0",
-    "@types/leaflet": "^1.9.14",
-    "@types/maplibre-gl": "^1.13.2",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
-    "jquery": "^3.7.1",
-    "leaflet": "^1.9.4",
-    "maplibre-gl": "^4.7.1",
-    "next": "^15.1.2",
-    "postcss": "^8.4.49",
-    "react": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-id-swiper": "^4.0.0",
-    "react-intersection-observer": "^9.13.1",
-    "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.28.0",
-    "swiper": "^11.1.15",
-    "tailwindcss": "^3.4.14",
-    "vike": "^0.4.206",
-    "vike-react": "^0.5.9",
-    "vite-plugin-cjs-interop": "^2.1.6",
-    "world-geojson": "^3.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@eslint/js": "^9.13.0",
-    "@types/geojson": "^7946.0.15",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/parser": "^8.14.0",
-    "@vitejs/plugin-react": "^4.3.3",
-    "babel-loader": "^9.2.1",
-    "eslint": "^9.13.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "react-dom": "^18.3.1",
-    "supabase": "^2.1.1",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
-  }
+    "name": "frontend",
+    "private": true,
+    "type": "module",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "importSort": {
+        ".js, .jsx, .ts, .tsx": {
+            "style": "module",
+            "parser": "typescript"
+        }
+    },
+    "dependencies": {
+        "@stadiamaps/maplibre-search-box": "^1.1.0",
+        "@supabase/supabase-js": "^2.47.10",
+        "@turf/turf": "^7.1.0",
+        "@types/leaflet": "^1.9.14",
+        "@types/maplibre-gl": "^1.13.2",
+        "@vercel/analytics": "^1.4.1",
+        "@vercel/speed-insights": "^1.1.0",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "leaflet": "^1.9.4",
+        "maplibre-gl": "^4.7.1",
+        "next": "^15.1.2",
+        "postcss": "^8.4.49",
+        "react": "^18.3.1",
+        "react-icons": "^5.3.0",
+        "react-id-swiper": "^4.0.0",
+        "react-intersection-observer": "^9.13.1",
+        "react-leaflet": "^4.2.1",
+        "react-map-gl": "^7.1.7",
+        "react-router-dom": "^6.28.0",
+        "swiper": "^11.1.15",
+        "tailwindcss": "^3.4.14",
+        "vike": "^0.4.206",
+        "vike-react": "^0.5.9",
+        "vite-plugin-cjs-interop": "^2.1.6",
+        "world-geojson": "^3.1.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "@babel/preset-react": "^7.25.9",
+        "@eslint/js": "^9.13.0",
+        "@types/geojson": "^7946.0.15",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@typescript-eslint/parser": "^8.14.0",
+        "@vitejs/plugin-react": "^4.3.3",
+        "babel-loader": "^9.2.1",
+        "eslint": "^9.13.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.14",
+        "globals": "^15.11.0",
+        "prettier": "^3.4.2",
+        "prettier-plugin-import-sort": "^0.0.7",
+        "react-dom": "^18.3.1",
+        "supabase": "^2.1.1",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.11.0",
+        "vite": "^5.4.10",
+        "webpack": "^5.96.1",
+        "webpack-cli": "^5.1.4"
+    }
 }
