--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
         "leaflet": "^1.9.4",
         "maplibre-gl": "^4.7.1",
         "next": "^15.1.2",
+        "pmtiles": "^4.1.0",
         "postcss": "^8.4.49",
+        "protomaps-themes-base": "^4.3.0",
         "react": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-id-swiper": "^4.0.0",
