--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build",
+        "build": "tsx src/scripts/generateSitemap.ts && tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
@@ -67,6 +67,7 @@
         "prettier-plugin-import-sort": "^0.0.7",
         "react-dom": "^18.3.1",
         "supabase": "^2.1.1",
+        "tsx": "^4.19.2",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.11.0",
         "vite": "^5.4.10",
