--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "postcss": "^8.4.49",
         "protomaps-themes-base": "^4.3.0",
         "react": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
         "react-icons": "^5.3.0",
         "react-id-swiper": "^4.0.0",
         "react-intersection-observer": "^9.13.1",
