--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ tqdm = "^4.67.0"
 jupyter = "^1.1.1"
 folium = "^0.18.0"
 supabase = "^2.10.0"
+free-proxy = "^1.1.3"
+geocoder = "^1.38.1"
+joblib = "^1.4.2"
 
 
 [tool.poetry.group.test.dependencies]
